@@ -121,4 +121,6 @@ Optional packages include:
             to read linux-swap, reiser4, hfs, and hfs+ file system
             volume labels.
           * If the blkid command is in the search path, it will be used
-            to read file system UUIDs.
+            to read file system UUIDs and labels. 
+            blkid is part of the e2fsprogs package.
+
