@@ -1,3 +1,11 @@
+2008-11-13  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/FS_Info.h,
+	  src/FS_Info.cc,
+	  src/GParted_Core.cc,
+	  README: Improved read label performance with blkid cached results.
+	  - When possible use blkid cached results to determine volume label.
+
 2008-11-12  Curtis Gedak  <gedakc@gmail.com>
 
 	* README: Updated directories and dependencies.
